2017-01-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup.c (start_index): Remove unused ptr and
	  bytes_written variables

2017-01-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/xml-source/amanda.conf.5.xml: Add a &nbsp; to force a space

2017-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-server-encrypt-end.pl: Remove
	  '  sendbackup: size' line

2017-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Eric Schnoebelen <eric@cirr.com>
	* config/amanda/defaults.m4: Install amanda-security.conf in
	  $sysconfdir

2017-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Paths.pm.in: export SECURITY_FILE and AMANDATES_FILE
	* common-src/amgetconf.pl: Add build.amdatadir, build.security_file
	  and build.amandates_file
	* installcheck/amgetconf.pl: Test them

2017-01-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-server-encrypt-end.pl,
	  installcheck/failure-server-encrypt-no-exec.pl.
	  installcheck/failure-server-encrypt-not-found.pl: Call
	  check_amreport with skip_size

2017-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/failure-server-encrypt.pl: Call check_amreport with
	  skip_size

2017-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/flags.m4: Detect clang compiler
	* common-src/ammessage.c: Fix warning found by clang compiler
	* common-src/amutil.c: Fix warning found by clang compiler
	* common-src/conffile.c: Fix warning found by clang compiler
	* common-src/crc32-test.c: Fix warning found by clang compiler
	* common-src/security-util.c: Fix warning found by clang compiler
	* device-src/ndmp-device.c: Fix warning found by clang compiler

2017-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/Makefile.am: crc32-test.o: AM_CFLAGS += $(SSE42_CFLAGS)
	* common-src/amcrc32chw.c: Use __SSE4_2__, set compiled_with_sse4_2